made mobile friendly fixed word wrap bug

--- a/src/styles/Styles.css
+++ b/src/styles/Styles.css
@@ -7,6 +7,7 @@
 
 .tasks-container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     flex-direction: column;
     border-radius: 5px;
@@ -15,14 +16,19 @@
 
 .content{
     display: flex;
-    /* flex-direction: row; */
+    flex-direction: column;
     width: 100%;
 }
 
 .task-item{
     display: flex;
-    width: 100%;
-    margin: auto 10px;
+    flex-direction: column;
+    width: 80%;
+    justify-content: center;
+    padding: 15px;
+    margin: auto;
+    text-align: left;
+    word-wrap: break-word;
 }
 
 .strikeThrough{
@@ -31,8 +37,9 @@
 
 .buttonArea{
     display: flex;
-    justify-content: flex-end;
-    width: 100%;
+    align-self: center;
+    justify-self: center;
+    padding: 0px;
     margin: 10px 20px;
 }
 
@@ -44,8 +51,8 @@
     border: none;
     outline: none;
     border-bottom: 1px solid black;
-    margin: 20px;
-    width: 60vw;
+    margin: 20px 20px 20px 0px;
+    width: 40vw;
 }
 .m-button{
     display: flex;
